Rework hired role skills and add Job Stats UI
Overhauls hired-role eligibility around two-skill totals (61+), canonical profession overrides, universal adult courier access, and nitwit-only restrictions. Adds a new Job Stats interaction page with readiness, qualification progress, aptitude, speed, transfer limits, and role detail text.

Hired work throughput now scales from role aptitude (70/30 primary/support): task cadence, block work timing, fishing waits, combat recovery, and transfer trip capacity for courier/cook/smelter/brewing, while preserving vanilla workstation processing timers. Successful hired work now preserves each action’s practice budget and splits growth across both role skills at 70/30, with updated docs, localization, and game tests.